--- a/id_gs1_org/resolver/templates/01.html
+++ b/id_gs1_org/resolver/templates/01.html
@@ -29,7 +29,7 @@
             color: white;
         }
     </style>
-    <script type="application/ld+json" id="resolverDoc">
+    <script type="application/json" id="resolverDoc">
         [resolver_document]
     </script>
     <script>
