--- a/resolver_web_server/templates/responses/404.html
+++ b/resolver_web_server/templates/responses/404.html
@@ -41,7 +41,7 @@
 </header>
 
 <main id="main">
-    <p>Sorry, we do not know anything about GS1 key '{"gs1KeyCode"}' with value '{"gs1KeyValue"}'</p>
+    <p>Sorry, we do not know anything about GS1 key '{"identifierKeyType"}' with value '{"identifierKey"}'</p>
 </main>
 
 <footer class="resFooter">
