--- a/resolver_data_entry_server/public/stylesheets/style.css
+++ b/resolver_data_entry_server/public/stylesheets/style.css
@@ -12,7 +12,9 @@ th, td {
   padding: 8px;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(even) td {
+    background-color: #f2f2f2;
+    }
 
 a {
   color: #00B7FF;
