--- a/resolver_web_server/templates/responses/500.html
+++ b/resolver_web_server/templates/responses/500.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title id="pagetitle">404 Not Found</title>
+    <title id="pagetitle">500 Internal Server Error</title>
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="/css/gs1Corporate.css" /></head>
 <body>
@@ -14,8 +14,8 @@
 </header>
 
 <main id="main">
-    <h1 id="pageH1">404 Not Found</h1>
-    <p>We're really sorry but we don't have any information about the requested GS1 identifier. Please <a href="https://www.gs1.org/contact">contact your local GS1 Member Organisation</a> and tell them that you were here and what you were hoping to find. We can then work with industry to make the service better for next time.</p>
+    <h1 id="pageH1">500 Internal Server Error</h1>
+    <p>Well this is embarrassing. Please let us know about this error as soon as possible by contacting <a href="https://www.gs1.org/contact">your local GS1 Member Organisation</a>. Errors like this are not supposed to happen - we'll get on to fixing it right away</p>
     <p>More information is available about the <a href="https://www.gs1.org/standards/gs1-digital-link">GS1 Digital Link standard</a> and the <a href="https://www.gs1.org/standards/gs1-resolver-service">resolver service</a>.</p>
 
 
